cambios estéticos en la información del tema

--- a/popup.html
+++ b/popup.html
@@ -57,7 +57,7 @@
 		</div><!-- navigation -->
 		
 		<div id="messages">
-			<div id="messages-header">
+			<div id="messages-header" class="messages-header">
 				<div class="search">
 					<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
 					<a type="button" id="search" class ="fa fa-search"></a>
