eliminación de elementos no presentes en primera versión, privados y buscador, y temas bloqueados

--- a/popup.html
+++ b/popup.html
@@ -58,10 +58,10 @@
 		
 		<div id="messages">
 			<div id="messages-header" class="messages-header">
-				<div class="search">
+<!-- 				<div class="search">
 					<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
 					<a type="button" id="search" class ="fa fa-search"></a>
-				</div>
+				</div> -->
 				<div id="board-info">
 					<div id="board-title" class="fa fa-chevron-circle-down"></div>
 					<div id="board-description"></div>
@@ -94,7 +94,7 @@
 					<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
 						<ul id="send2theme-list"></ul>
 					</div>
-					<div id="send2priv" class="send2">PRIVADO</div>
+					<!-- <div id="send2priv" class="send2">PRIVADO</div> -->
 					<div id="send2social" class="send2">REDES
 						<input id="send2fb" name="send2fb" type="checkbox"/>
 						<label for="send2fb" class="facebook fa fa-facebook-square"></label>
