arreglo temporal de un problema que no entiendo con la caja de búsqueda

--- a/popup.html
+++ b/popup.html
@@ -58,10 +58,10 @@
 		
 		<div id="messages">
 			<div id="messages-header" class="messages-header">
-<!-- 				<div class="search">
+				<div class="search">
 					<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
 					<a type="button" id="search" class ="fa fa-search"></a>
-				</div> -->
+				</div>
 				<div id="board-info">
 					<div id="board-title" class="fa fa-chevron-circle-down"></div>
 					<div id="board-description"></div>
