mensaje de carga de thread

--- a/popup.html
+++ b/popup.html
@@ -26,8 +26,8 @@
 	<div id="header">
 		<ul id="header-menu">
 			<li id="profile-item">perfil</li>
-			<li>opciones</li>
-			<li id="logout">desconectar</li>
+			<!-- <li>opciones</li>
+			<li id="logout">desconectar</li> -->
 		</ul>
 		<div id="header-user">
 			<img id="user-avatar" />
@@ -67,8 +67,11 @@
 					<div id="board-description"></div>
 				</div>
 			</div>
-			<div id="board" class="message-list"></div>
-			<div id="tree-board"><a id="closetree" href="#">volver</a><div id="tree"></div></div>
+			<div id="board" class="message-list board"></div>
+			<div id="tree-board" class="board">
+				<a id="closetree" href="#">volver</a>
+				<div id="tree"></div>
+			</div>
 		</div>
 
 		<!-- SECCION. EDITOR -->
