--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,6 @@
 	<script type="text/javascript" src="js/windows.js"></script>
 	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
-	<script type="text/javascript" src="lib/d3.v2.min.js"></script>
 </head>
 <body>
 	<div id="header">
@@ -69,7 +68,10 @@
 			</div>
 			<div id="board" class="message-list board"></div>
 			<div id="tree-board" class="board">
-				<a id="closetree" href="#">volver</a>
+				<div class="tree-toolbar">
+					<div id="closetree" href="#" class="btn red fa fa-chevron-left"> volver</div>
+					<div id="show-d3" href="#" class="btn red fa fa-eye"> visualiza este hilo</div>
+				</div>
 				<div id="tree"></div>
 			</div>
 		</div>
