--- a/popup.html
+++ b/popup.html
@@ -122,7 +122,7 @@
 				<div class="profile-social"><span>WEB</span></div>
 			</div>
 			<div class="selector">
-				<div id="follow-to" class="selector-item on">
+				<div id="follow-to" class="selector-item">
 					<h4>sigo a <span class="number"></span> usuarios</h4>
 					<ul class="profile-list"></ul>
 				</div>
