mejor visualizacion de threads

--- a/popup.html
+++ b/popup.html
@@ -70,6 +70,7 @@
 			<div id="tree-board" class="board">
 				<div class="tree-toolbar">
 					<div id="closetree" href="#" class="btn red fa fa-chevron-left"> volver</div>
+					<div id="noindent" href="#" class="btn red"> no indentar</div>
 					<div id="show-d3" href="#" class="btn red fa fa-eye"> visualiza este hilo</div>
 				</div>
 				<div id="tree"></div>
