varios cambios de destilo

--- a/popup.html
+++ b/popup.html
@@ -69,9 +69,12 @@
 			<div id="board" class="message-list board"></div>
 			<div id="tree-board" class="board">
 				<div class="tree-toolbar">
-					<div id="closetree" href="#" class="btn red fa fa-chevron-left"> volver</div>
-					<div id="noindent" href="#" class="btn red"> no indentar</div>
-					<div id="show-d3" href="#" class="btn red fa fa-eye"> visualiza este hilo</div>
+					<div id="closetree" class="btn fa fa-arrow-left"> VOLVER</div>
+					<div class="controls">
+						<div id="noindent" class="btn fa fa-align-justify"> VER COMO LISTA</div>
+						<div id="mouse-follow" class="btn fa fa-arrows-h on"> SEGUIMIENTO</div>
+						<div id="show-d3" class="btn fa fa-eye"> VISUALIZAR</div>
+					</div>
 				</div>
 				<div id="tree"></div>
 			</div>
