terminado envío de imágenes adjuntas a mensajes

--- a/popup.html
+++ b/popup.html
@@ -101,6 +101,7 @@
 				<div id="newmessage-container">
 					<div id="newimage" class="fa fa-paperclip">
 						<canvas id="canvasimage"></canvas>
+						<div id="removeimage" class="fa fa-trash-o"></div>
 					</div> <!-- optional new image -->
 					<div id="newmessage" contenteditable="true">
 					</div>
