--- a/popup.html
+++ b/popup.html
@@ -59,7 +59,11 @@
 			<div id="messages-header" class="messages-header">
 				<div class="search">
 					<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
-					<a type="button" id="search" class ="fa fa-search"></a>
+					<a id="search" class ="button fa fa-search"></a>
+				</div>
+				<div class="nav">
+					<a id="history-left" class="button fa fa-angle-left"></a>
+					<a id="history-right" class="button fa fa-angle-right"></a>
 				</div>
 				<div id="board-info">
 					<div id="board-title" class="fa fa-chevron-circle-down"></div>
