cambios de diseño del editor

--- a/popup.html
+++ b/popup.html
@@ -111,16 +111,18 @@
 				</div>
 				<div id="destinations">
 					<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
-						<ul id="send2theme-list"></ul>
+						<ul></ul>
 					</div>
 					<!-- <div id="send2priv" class="send2">PRIVADO</div> -->
 					<div id="send2social" class="send2">REDES
 						<input id="send2fb" name="send2fb" type="checkbox"/>
-						<label for="send2fb" class="facebook fa fa-facebook-square"></label>
+						<label for="send2fb" class="facebook fa fa-facebook-square"> Facebook</label>
 						<input id="send2tt" name="send2tt" type="checkbox"/>
-						<label for="send2tt" class="twitter fa fa-twitter-square"></label>
+						<label for="send2tt" class="twitter fa fa-twitter-square"> Twitter</label>
 					</div>
-					<div id="send2user" class="send2"></div>	<!-- para el envío de privados -->
+					<div id="send2user" class="send2">USUARIOS (privado)
+						<ul></ul>
+					</div>	<!-- para el envío de privados -->
 				</div>
 			</div>
 		</div>
