--- a/popup.html
+++ b/popup.html
@@ -51,19 +51,21 @@
 		</div><!-- navigation -->
 
 		<div id="messages-header" class="messages-header">
-			<div class="search">
-				<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
-				<a id="search" class ="button fa fa-search"></a>
-			</div>
 			<div class="nav">
-				<a id="history-left" class="button fa fa-angle-left"></a>
-				<a id="history-right" class="button fa fa-angle-right"></a>
+				<a id="history-left" class="button fa fa-arrow-left"></a>
+				<a id="history-right" class="button fa fa-arrow-right"></a>
+				<a id="search-button" class ="button fa fa-search"></a>
 			</div>
 			<div id="board-info">
 				<div id="board-title" class="fa fa-chevron-circle-down"></div>
 				<div id="board-description"></div>
 			</div>
 		</div>
+		<form class="search">
+			<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
+			<a id="search-down" class="button fa fa-angle-down"></a>
+			<a id="search-up" class="button fa fa-angle-up"></a>
+		</form>
 
 		<div id="messages">
 			
@@ -83,7 +85,8 @@
 
 		<!-- SECCION. EDITOR -->
 		<div id="edit-section">
-			<h1 id="edit-section-h1"><span class="edit-title">NUEVO MENSAJE</span><span class="fa fa-chevron-circle-up"></span></h1>
+			<h1 id="edit-section-h1" class="fa fa-chevron-circle-up"> NUEVO MENSAJE</h1>
+			<span class="edit-description">Información</span>
 			<div id="editor">
 				<div id="commands">
 					<div id="counter">280</div>
