cambios de estilo en tree board

--- a/popup.html
+++ b/popup.html
@@ -72,7 +72,7 @@
 			<div id="board" class="message-list board"></div>
 			<div id="tree-board" class="board">
 				<div class="tree-toolbar">
-					<div id="closetree" class="btn fa fa-arrow-left"> VOLVER</div>
+					<div id="closetree" class="btn fa fa-times"> CERRAR</div>
 					<div class="controls">
 						<div id="noindent" class="btn fa fa-align-justify"> VER COMO LISTA</div>
 						<div id="mouse-follow" class="btn fa fa-arrows-h on"> SEGUIMIENTO</div>
