algunas mejoras de la visualización

--- a/d3Thread.html
+++ b/d3Thread.html
@@ -3,10 +3,22 @@
 <head>
 	<meta charset="utf-8" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/d3Thread.css" type="text/css" />
 	<script type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
+	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/eskup-api.js"></script>
+	<script type="text/javascript" src="js/popup.js"></script>
+
 </head>
 <body>
+<div id="#chart"></div>
+<div id="chart-control">
+	<ul id="users-list"></ul>
+	<ul id="keywords-list"></ul>
+</div>
 
 <script type="text/javascript" src="js/d3Thread.js"></script>
 </body>
