arreglado problema con envío de mensajes, html, text

--- a/d3Thread.html
+++ b/d3Thread.html
@@ -11,15 +11,14 @@
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
-
+	<script type="text/javascript" src="js/d3SampleData.js"></script>
 </head>
 <body>
-<div id="#chart"></div>
-<div id="chart-control">
-	<ul id="users-list"></ul>
-	<ul id="keywords-list"></ul>
-</div>
+	<div id="chart-control">
+		<ul id="users-list"></ul>
+		<ul id="keywords-list"></ul>
+	</div>
 
-<script type="text/javascript" src="js/d3Thread.js"></script>
+	<script type="text/javascript" src="js/d3Thread.js"></script>
 </body>
 </html>
