versión inisical del buscador, cambio de fuente, mejoras estéticas, mejora de la lógica de navegación entre tablones

--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,300' rel='stylesheet' type='text/css'>
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,400italic,700italic,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Dosis:300,400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'> -->
+	<link href='http://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
@@ -61,7 +63,7 @@
 			</div>
 		</div>
 		<form class="search">
-			<input name="search" type="text" value="" placeholder="buscar…" id="searchtxt_sigo"/>
+			<input name="searchTXT" type="text" value="" placeholder="buscar…" id="searchTXT"/>
 			<a id="search-down" class="button fa fa-angle-down"></a>
 			<a id="search-up" class="button fa fa-angle-up"></a>
 		</form>
