algunas mejoras del buscador

--- a/popup.html
+++ b/popup.html
@@ -63,6 +63,8 @@
 			</div>
 		</div>
 		<form class="search">
+			<i id="searching" class="fa fa-cog fa-spin"></i>
+			<span id="search-info"></span>
 			<input name="searchTXT" type="text" value="" placeholder="buscar…" id="searchTXT"/>
 			<a id="search-down" class="button fa fa-angle-down"></a>
 			<a id="search-up" class="button fa fa-angle-up"></a>
