separado el html del editor en otro archivo

--- a/popup.html
+++ b/popup.html
@@ -82,49 +82,8 @@
 		</div>
 
 		<!-- SECCION. EDITOR -->
-		<div id="edit-section">
-			<h1 id="edit-section-h1" class="fa fa-chevron-up"> NUEVO MENSAJE</h1>
-			<span class="edit-description">Información</span>
-			<div id="editor">
-				<div id="commands">
-					<div id="counter">280</div>
-					<div class="send" id="send" data-command="send">ENVIAR</div>
-					<div class="cancel" id="cancel">CANCELAR</div>
-				</div>
-				<div id="toolbar">
-					<button id="setbold" class="button fa fa-bold" title="negrita"></button>
-					<button id="setitalic" class="button fa fa-italic" title="cursiva"></button>
-					<button id="insertlink" class="button fa fa-link" title="enlazar esta página"></button>
-					<!-- <button id="insertvideo" class="button fa fa-video-camera" title="insertar vídeo"></button> -->
-					<button id="insertimage" class="button fa fa-camera" title="insertar imagen"></button>
-					<!-- <button id="cortas" class="button fa fa-cut" title="acortar enlaces"></button> -->
-					
-				</div>
-				<div id="newmessage-container">
-					<div id="newimage" class="fa fa-paperclip">
-						<canvas id="canvasimage"></canvas>
-						<div id="removeimage" class="fa fa-trash-o"></div>
-					</div> <!-- optional new image -->
-					<div id="newmessage" contenteditable="true"></div>
-				</div>
-				<div id="destinations">
-					<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
-						<ul></ul>
-					</div>
-					<!-- <div id="send2priv" class="send2">PRIVADO</div> -->
-					<div id="send2social" class="send2">REDES
-						<input id="send2fb" name="send2fb" type="checkbox"/>
-						<label for="send2fb" class="facebook fa fa-facebook-square"> Facebook</label>
-						<input id="send2tt" name="send2tt" type="checkbox"/>
-						<label for="send2tt" class="twitter fa fa-twitter-square"> Twitter</label>
-					</div>
-					<div id="send2user" class="send2">USUARIOS (privado)
-						<ul></ul>
-					</div>	<!-- para el envío de privados -->
-				</div>
-			</div>
-		</div>
-	</div> <!-- msg-container -->
+		<div id="edit-section"></div>
+	</div> <!-- messages-container -->
 
 	<div id="profile-container" class="container">
 		<!-- SECCION. PERFIL -->
