--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
 	<link rel="stylesheet" href="css/tree.css" type="text/css" />
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-	<!-- <script type="text/javascript" src="js/jquery.appear.js"></script> -->
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
@@ -82,7 +81,11 @@
 		</div>
 
 		<!-- SECCION. EDITOR -->
-		<div id="edit-section"></div>
+		<div id="edit-section">
+			<h1 id="edit-section-h1" class="fa fa-chevron-up"> NUEVO MENSAJE</h1>
+			<span class="edit-description">Información</span>
+			<div id="editor-container"></div> <!-- aquí se carga dinámicamente el editor -->
+		</div>
 	</div> <!-- messages-container -->
 
 	<div id="profile-container" class="container">
