algunos cambios en lógica de respuestas y forward

--- a/d3Thread.html
+++ b/d3Thread.html
@@ -10,6 +10,7 @@
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
+	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 	<script type="text/javascript" src="js/d3SampleData.js"></script>
 </head>
