algunas mejoras del editor, cambino bueno

--- a/editor.html
+++ b/editor.html
@@ -24,6 +24,9 @@
 		<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
 			<ul></ul>
 		</div>
+		<div id="NOsend2theme" class="send2">TEMAS (<span class="count">0</span>)
+			<ul></ul>
+		</div>
 		<!-- <div id="send2priv" class="send2">PRIVADO</div> -->
 		<div id="send2social" class="send2">REDES
 			<input id="send2fb" name="send2fb" type="checkbox"/>
