--- a/editor.html
+++ b/editor.html
@@ -21,21 +21,14 @@
 		<div id="newmessage" contenteditable="true"></div>
 	</div>
 	<div id="destinations">
-		<div id="send2theme" class="send2">TEMAS (<span class="count">0</span>)
-			<ul></ul>
-		</div>
-		<div id="NOsend2theme" class="send2">TEMAS (<span class="count">0</span>)
-			<ul></ul>
-		</div>
-		<!-- <div id="send2priv" class="send2">PRIVADO</div> -->
-		<div id="send2social" class="send2">REDES
+		<div id="send2theme" class="send2"><ul></ul></div>
+		<div id="NOsend2theme" class="send2"><ul></ul></div>
+		<div id="send2social" class="send2">
 			<input id="send2fb" name="send2fb" type="checkbox"/>
 			<label for="send2fb" class="facebook fa fa-facebook-square"> Facebook</label>
 			<input id="send2tt" name="send2tt" type="checkbox"/>
 			<label for="send2tt" class="twitter fa fa-twitter-square"> Twitter</label>
 		</div>
-		<div id="send2user" class="send2">USUARIOS (privado)
-			<ul></ul>
-		</div>	<!-- para el envío de privados -->
+		<div id="send2user" class="send2"><ul></ul></div>	<!-- privados -->
 	</div>
 </div>
