casi terminado el editor

--- a/editor.html
+++ b/editor.html
@@ -21,7 +21,7 @@
 		<div id="newmessage" contenteditable="true"></div>
 	</div>
 	<div id="destinations">
-		<div id="send2theme" class="send2"><ul></ul><span id="add-themes">...</span></div>
+		<div id="send2theme" class="send2"><ul></ul><span id="add-themes">editar...</span></div>
 		<div id="NOsend2theme" class="send2"><ul></ul></div>
 		<div id="send2social" class="send2">
 			<input id="send2fb" name="send2fb" type="checkbox"/>
