terminado el buscador de usuarios

--- a/editor.html
+++ b/editor.html
@@ -1,7 +1,7 @@
 <div id="editor">
 	<div id="commands">
 		<div id="counter">280</div>
-		<div class="send fa fa-send" id="send" data-command="send">ENVIAR</div>
+		<div class="send" id="send" data-command="send">ENVIAR</div>
 		<div class="cancel" id="cancel">CANCELAR</div>
 	</div>
 	<div id="toolbar">
@@ -21,14 +21,20 @@
 		<div id="newmessage" contenteditable="true"></div>
 	</div>
 	<div id="destinations">
-		<div id="send2theme" class="send2"><ul></ul><span id="add-themes">editar...</span></div>
-		<div id="NOsend2theme" class="send2"><ul></ul></div>
+		<div id="send2theme" class="send2"><ul class="linear"></ul><span id="add-themes">editar...</span></div>
+		<div id="NOsend2theme" class="send2"><ul class="linear"></ul></div>
 		<div id="send2social" class="send2">
 			<input id="send2fb" name="send2fb" type="checkbox"/>
 			<label for="send2fb" class="facebook fa fa-facebook-square"> Facebook</label>
 			<input id="send2tt" name="send2tt" type="checkbox"/>
 			<label for="send2tt" class="twitter fa fa-twitter-square"> Twitter</label>
 		</div>
-		<div id="send2user" class="send2"><ul></ul></div>	<!-- privados -->
+		<div id="send2user" class="send2">
+			<ul></ul>
+			<div id="search-user">
+				<input id="search-user-value" type="text" placeholder="nombre">
+				<ul id="search-user-results"></ul>
+			</div>
+		</div>	<!-- privados -->
 	</div>
 </div>
