terminado el nuevo selector de temas y de usuarios

--- a/editor.html
+++ b/editor.html
@@ -33,7 +33,10 @@
 			<h2>TEMAS <i class="fa fa-chevron-right"></i></h2>
 			<div>
 				<ul class="linear"></ul>
-				<span id="add-themes">editar...</span>
+				<div class="finder" id="search-theme">
+					<input type="text" placeholder="añadir...">
+					<ul></ul>
+				</div>
 			</div>
 		</div>
 
@@ -50,7 +53,7 @@
 			<div>
 				<ul class="linear"></ul>
 				<div class="finder" id="search-user">
-					<input type="text" placeholder="nombre">
+					<input type="text" placeholder="añadir...">
 					<ul></ul>
 				</div>
 			</div>
