--- a/editor.html
+++ b/editor.html
@@ -30,7 +30,7 @@
 	</div>
 	<div id="destinations">
 		<div id="send2theme" class="send2">
-			<h2>TEMAS <i class="fa fa-chevron-right"></i></h2>
+			<h2>TEMAS <i class="fa fa-angle-right"></i></h2>
 			<div>
 				<ul class="linear"></ul>
 				<div class="finder" id="search-theme">
@@ -49,7 +49,7 @@
 		</div>
 
 		<div id="send2user" class="send2">
-			<h2>USUARIOS <i class="fa fa-chevron-right"></i></h2>
+			<h2>USUARIOS <i class="fa fa-angle-right"></i></h2>
 			<div>
 				<ul class="linear"></ul>
 				<div class="finder" id="search-user">
