--- a/src/popup.html
+++ b/src/popup.html
@@ -8,7 +8,8 @@
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
 	<link rel="stylesheet" href="css/tree.css" type="text/css" />
-	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+
+	<script type="text/javascript" src="lib/jquery-2.1.1.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/messageControl.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
