--- a/src/image_editor.html
+++ b/src/image_editor.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 	<link rel="stylesheet" href="css/image-editor.css" type="text/css" />
 	
-	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="lib/fabric.js"></script>
 	<script type="text/javascript" src="lib/masonry.min.js"></script>
 	<script type="text/javascript" src="lib/caman.3.3.0.full.min.js"></script>
