--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -7,14 +7,14 @@
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/d3Thread.css" type="text/css" />
 
-	<script type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
-	<script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
+	<script build="no" type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
+	<script build="no" type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
 	
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
-	<script type="text/javascript" src="js/d3SampleData.js" exclude="1"></script>
+	<script build="remove" type="text/javascript" src="js/d3SampleData.js" exclude="1"></script>
 </head>
 <body>
 	<div id="chart-control">
