--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
+	<script type="text/javascript" src="js/messageControl.js"></script>
 	<script build="remove" type="text/javascript" src="js/d3SampleData.js" exclude="1"></script>
 </head>
 <body>
