--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -6,11 +6,14 @@
 	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/d3Thread.css" type="text/css" />
+	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
+	<link rel="stylesheet" href="css/editor.css" type="text/css" />
 
 	<script build="no" type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
 	<script build="no" type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
 	
 	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
@@ -19,8 +22,17 @@
 </head>
 <body>
 	<div id="chart-control">
-		<ul id="users-list"></ul>
-		<ul id="keywords-list"></ul>
+		<h1 class="fa fa-comments"> CONVERSACIÓN</h1>
+		<h2>Usuarios</h2>
+		<ul id="users-list" class="list"></ul>
+		<h2>Palabras</h2>
+		<ul id="keywords-list" class="list"></ul>
+		<h2>Imágenes</h2>
+		<ul id="images-list" class="list"></ul>
+		<h2>Vídeos</h2>
+		<ul id="videos-list" class="list"></ul>
+	</div>
+	<div id="chart-ouput">
 	</div>
 
 	<script type="text/javascript" src="js/d3Thread.js"></script>
