--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -25,13 +25,13 @@
 	<div id="chart-control" class="expandable" data-width="400px">
 		<h1 class="fa fa-sliders"> CONTROLES<div class="fa fa-chevron-right expand"></div></h1>
 		<div>
-			<h2>Usuarios</h2>
+			<h2>Usuarios <span id="n-users"></span><span id="check-all-users" class="check"></span></h2>
 			<div class="list-head item">
-				<span id="check-all-users" class="check">marcar todo</span>
+				<span id="sort-nickname" class="fa fa-sort"> nickname</span>
 				<span class="color-picker"></span>
-				<span>nº mensajes</span>
-				<span>nº palabras</span>
-				<span>nº respuestas</span>
+				<span id="sort-nmessages" class="fa fa-sort"> mensajes</span>
+				<span id="sort-nwords" class="fa fa-sort"> palabras</span>
+				<span id="sort-nreplies" class="fa fa-sort"> respuestas</span>
 			</div>
 			<ul id="users-list" class="list"></ul>
 			<h2>Palabras</h2>
