--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -36,7 +36,7 @@
 			</div>
 			<ul id="users-list" class="list"></ul>
 			<h2>Palabras</h2>
-			<ul id="keywords-list" class="list"></ul>
+			<ul id="words-list" class="list"></ul>
 			<h2>Imágenes</h2>
 			<ul id="images-list" class="list"></ul>
 			<h2>Vídeos</h2>
