--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -25,14 +25,36 @@
 </head>
 <body id="conversation">
 	<div id="d3-frequency"></div>
-	<div id="d3-chart"></div>
-	<div id="chart-options">
-		<div id="set-timeline" class="option">timeline</div>
-		<div id="set-tree" class="option">árbol</div>
+	<div id="d3-chart"><h1>GRÁFICO</h1></div>
+	<div id="chart-messages" class="expandable" data-width="max">
+		<h1 class="fa fa-comments"> CONVERSACIÓN<div class="fa fa-chevron-right expand"></div></h1>
+		<div id="chart-ouput"></div>
 	</div>
+	<div id="chart-filter" class="expandable" data-width="500px">
+		<h1 class="fa fa-filter"> FILTRADO<div class="fa fa-chevron-right expand"></div></h1>
+		<p><b>FILTRA</b> los mensajes que cumplen con <b>TODOS</b> los siguientes criterios:</p>
+		<div class="users-list">
+			<h2>Usuarios</span></h2>
+			<ul class="list"></ul>
+		</div>
+		<div class="words-list">
+			<h2>Top Palabras</h2>
+			<ol class="list columns"></ol>
+		</div>
+		<div class="images-list">
+			<h2>Imágenes</h2>
+			<ul class="list"></ul>
+		</div>
+		<div class="videos-list">
+			<h2>Vídeos</h2>
+			<ul class="list"></ul>
+		</div>
+	</div>
+	
 	<div id="chart-control" class="expandable" data-width="500px">
-		<h1 class="fa fa-sliders"> CONTROLES<div class="fa fa-chevron-right expand"></div></h1>
-		<div id="users-list">
+		<h1 class="fa fa-sliders"> SELECCIÓN<div class="fa fa-chevron-right expand"></div></h1>
+		<p><b>SELECCIONA</b> los mensajes que cumplen con <b>ALGUNO</b> de los siguientes criterios:</p>
+		<div class="users-list">
 			<h2>Usuarios <span id="n-users"></span><span id="check-all-users" class="check"></span></h2>
 			<div class="list-head item">
 				<span id="sort-nickname" class="nickname sort-users fa fa-sort" data-field="nickname"> nickname</span>
@@ -42,26 +64,29 @@
 				<span id="sort-nwords" class="nwords sort-users fa fa-sort" data-field="nWords"> palabras</span>
 				<span id="sort-nreplies" class="nreplies sort-users fa fa-sort" data-field="nReplies"> respuestas</span>
 			</div>
-			<ul id="users-list" class="list"></ul>
+			<ul class="list"></ul>
 		</div>
-		<div id="words-list">
+		<div class="words-list">
 			<h2>Top Palabras</h2>
-			<ol id="words-list" class="list columns"></ol>
+			<ol class="list columns"></ol>
 		</div>
-		<div id="images-list">
+		<div class="images-list">
 			<h2>Imágenes</h2>
-			<ul id="images-list" class="list"></ul>
+			<ul class="list"></ul>
 		</div>
-		<div id="videos-list">
+		<div class="videos-list">
 			<h2>Vídeos</h2>
-			<ul id="videos-list" class="list"></ul>
+			<ul class="list"></ul>
 		</div>
 	</div>
 
-	<div id="chart-messages" class="expandable" data-width="max">
-		<h1 class="fa fa-comments"> CONVERSACIÓN<div class="fa fa-chevron-right expand"></div></h1>
-		<div id="chart-ouput"></div>
+	<div id="chart-options">
+		<div id="set-timeline" class="option">timeline</div>
+		<div id="set-tree" class="option">árbol</div>
 	</div>
+	
+
+	
 
 
 	<script type="text/javascript" src="js/d3Thread.js"></script>
