--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -53,7 +53,7 @@
 	
 	<div id="chart-control" class="expandable" data-width="500px">
 		<h1 class="fa fa-sliders"> SELECCIÓN<div class="fa fa-chevron-right expand"></div></h1>
-		<p><b>SELECCIONA</b> los mensajes que cumplen con <b>ALGUNO</b> de los siguientes criterios:</p>
+		<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="or"></b> de los siguientes criterios:</p>
 		<div class="users-list">
 			<h2>Usuarios <span id="n-users"></span><span id="check-all-users" class="check"></span></h2>
 			<div class="list-head item">
