--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src="js/messageControl.js"></script>
 	<script type="text/javascript" src="js/d3Helpers.js"></script>
 	<script build="remove" type="text/javascript" src="js/d3SampleData.js" exclude="1"></script>
+	<script type="text/javascript" src="js/d3Thread.lib.js"></script>
 </head>
 <body id="conversation">
 	<div id="d3-frequency"></div>
@@ -30,32 +31,12 @@
 		<h1 class="fa fa-comments"> CONVERSACIÓN<div class="fa fa-chevron-right expand"></div></h1>
 		<div id="chart-ouput"></div>
 	</div>
-	<div id="chart-filter" class="expandable" data-width="500px">
-		<h1 class="fa fa-filter"> FILTRADO<div class="fa fa-chevron-right expand"></div></h1>
-		<p><b>FILTRA</b> los mensajes que cumplen con <b>TODOS</b> los siguientes criterios:</p>
-		<div class="users-list">
-			<h2>Usuarios</span></h2>
-			<ul class="list"></ul>
-		</div>
-		<div class="words-list">
-			<h2>Top Palabras</h2>
-			<ol class="list columns"></ol>
-		</div>
-		<div class="images-list">
-			<h2>Imágenes</h2>
-			<ul class="list"></ul>
-		</div>
-		<div class="videos-list">
-			<h2>Vídeos</h2>
-			<ul class="list"></ul>
-		</div>
-	</div>
 	
 	<div id="chart-control" class="expandable" data-width="500px">
 		<h1 class="fa fa-sliders"> SELECCIÓN<div class="fa fa-chevron-right expand"></div></h1>
-		<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="or"></b> de los siguientes criterios:</p>
+		<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
 		<div class="users-list">
-			<h2>Usuarios <span id="n-users"></span><span id="check-all-users" class="check"></span></h2>
+			<h2>Usuarios (<span id="n-users"></span>)<span id="check-all-users" class="check"></span></h2>
 			<div class="list-head item">
 				<span id="sort-nickname" class="nickname sort-users fa fa-sort" data-field="nickname"> nickname</span>
 				<span class="color-picker"></span>
@@ -84,11 +65,6 @@
 		<div id="set-timeline" class="option">timeline</div>
 		<div id="set-tree" class="option">árbol</div>
 	</div>
-	
-
-	
-
-
 	<script type="text/javascript" src="js/d3Thread.js"></script>
 </body>
 </html>
