terminadas mejoras de rendimiento

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -13,6 +13,7 @@
 	<script build="no" type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
 	<script build="no" type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
 	<script build="no" type="text/javascript" src="lib/rickshaw.min.js"></script>
+	<script build="no" type="text/javascript" src="lib/chroma.min.js"></script>
 	
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/dialog.js"></script>
